# fractal-accounts

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
fractal-accounts/: Cargo.toml  Dockerfile  docker-compose.yml  openapi
grafana/provisioning/dashboards/: auth.json  dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
k6/: script.js
migrations/: 0001_init.sql
proto/: Cargo.toml  auth.proto  build.rs  ledger.proto  user.proto
proto/src/: lib.rs
scripts/: load-test.sh  release.sh
services/auth-svc/: Cargo.toml  build.rs
services/auth-svc/src/: grpc.rs  handlers.rs  jwt.rs  main.rs
services/ledger-svc/: Cargo.toml
services/ledger-svc/src/: grpc.rs  main.rs
services/migrator/: Cargo.toml
services/migrator/src/: main.rs
services/user-svc/: Cargo.toml
services/user-svc/src/: grpc.rs  main.rs
terraform/: main.tf
