[workspace]
members = [
    "services/auth-svc",
    "services/user-svc",
    "services/ledger-svc",
    "services/migrator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CAN"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = "0.11"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
